# IDATT1004-2023-007

./: .gitignore  README.md
lego_bil/: .gitignore  calibrate.py  control.py  destroy.py  main.py  oving_2.py
lego_bil/noodle_pong/: control.py  destroy.py  reset_feeder.py
lego_bil/noodle_pong_rust/: Cargo.toml
lego_bil/noodle_pong_rust/src/: constants.rs  main.rs
network-test/: Cargo.toml
network-test/src/: main.rs
noodle_pong_app/: README.md  analysis_options.yaml  pubspec.yaml
noodle_pong_app/.VSCodeCounter/2023-11-03_14-41-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
noodle_pong_app/android/app/: build.gradle
noodle_pong_app/android/app/src/main/: AndroidManifest.xml
noodle_pong_app/ios/Runner/: Info.plist
noodle_pong_app/ios/Runner.xcodeproj/: project.pbxproj
noodle_pong_app/lib/: constants.dart  main.dart  noodle_pong_app.dart  page.dart  settings_page.dart  slingshot.dart  slingshot_page.dart  slingshot_painter.dart
noodle_pong_app/linux/: CMakeLists.txt  my_application.cc
noodle_pong_app/macos/Runner.xcodeproj/: project.pbxproj
noodle_pong_app/macos/Runner/Configs/: AppInfo.xcconfig
noodle_pong_app/test/: widget_test.dart
noodle_pong_app/web/: index.html  manifest.json
noodle_pong_app/windows/: CMakeLists.txt
noodle_pong_app/windows/runner/: Runner.rc  main.cpp
noodle_pong_rust/: Cargo.toml
noodle_pong_rust/src/: constants.rs  main.rs
test-server-windows/: Cargo.toml
test-server-windows/src/: main.rs
(+2 files in other folders)
